# GameEngine

./: LICENSE  README.md  main.py  pyproject.toml
engine/: __init__.py  camera.py  mesh.py  position.py  texture.py
engine/gl/: __init__.py  texturebuffer.py  vertexbuffer.py
engine/ui/: __init__.py  key.py  window.py
engine/util/: wavefront.py
models/: skydome.mtl
